# ilastiktools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml  test.yml
.github/workflows/etc/: bld-environment.yml  condarc-deploy.yml
cmake/modules/: FindILASTIKTOOLS_DEPENDENCIES.cmake  FindVIGRA.cmake  FindVIGRANUMPY_DEPENDENCIES.cmake
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.py
include/ilastiktools/: carving.hxx  python_vigra_converter.hxx
src/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/ilastiktools/: CMakeLists.txt  __init__.py  core.cxx
