#-------------------------------------------------------------------------------------------------------------------
# ilastiktools python  core module
#-------------------------------------------------------------------------------------------------------------------
add_subdirectory(ilastiktools)
